<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFCACA"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="383dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="28dp"
        android:text="Welcome to PennyStudy"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btntxt"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="286dp"
        android:text="@string/btntxt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="233dp"
        android:text="@string/btntxt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="19dp"
        android:text="@string/btntxt3"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green"
        android:ems="10"
        android:hint="@string/hint1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="DuplicateIds,MissingConstraints,NotSibling" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="31dp"
        android:background="@color/green"
        android:ems="10"
        android:hint="@string/hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="123dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="140dp"
        android:foregroundGravity=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>